--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine on
 RewriteRule ^(index|panel|faq|search|active)\.html$ $1.php
 RewriteRule ^index-([0-9]+)\.html$ index.php?cat=$1
-RewriteRule ^panel-(login|logout|register|sendpwd|editprofile|editoptions|editpwd)\.html$ panel.php?act=$1
+RewriteRule ^panel-(login|logout|register|sendpwd|editprofile|editoptions|editpwd|subscriptions)\.html$ panel.php?act=$1
 RewriteRule ^panel-al(0|1)\.html$ panel.php?al=$1
 RewriteRule ^panel-activate-([0-9]+)-([0-9a-zA-Z]+)\.html$ panel.php?act=activate&id=$1&key=$2
 RewriteRule ^forum-([0-9]+)\.html$ forum.php?id=$1
