--- a/.htaccess
+++ b/.htaccess
@@ -17,3 +17,4 @@ RewriteRule ^post-topic([0-9]+)-quotepost([0-9]+)\.html$ post.php?topic=$1&quote
 RewriteRule ^edit-post([0-9]+)\.html$ edit.php?post=$1
 RewriteRule ^edit-post([0-9]+)-delete\.html$ edit.php?post=$1&act=delete
 RewriteRule ^edit-topic([0-9]+)-(delete|move|lock|sticky|unlock|unsticky)\.html$ edit.php?topic=$1&act=$2
+RewriteRule ^online-([0-9]+)\.html$ online.php?page=$1
