--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteRule ^(index|panel|faq|search|active|online)\.html$ $1.php
+RewriteRule ^(index|panel|faq|search|active|online|members|rss|stats)\.html$ $1.php
 RewriteRule ^index-([0-9]+)\.html$ index.php?cat=$1
 RewriteRule ^panel-(login|logout|register|sendpwd|editprofile|editoptions|editpwd|subscriptions)\.html$ panel.php?act=$1
 RewriteRule ^panel-al(0|1)\.html$ panel.php?al=$1
@@ -18,3 +18,4 @@ RewriteRule ^edit-post([0-9]+)\.html$ edit.php?post=$1
 RewriteRule ^edit-post([0-9]+)-delete\.html$ edit.php?post=$1&act=delete
 RewriteRule ^edit-topic([0-9]+)-(delete|move|lock|sticky|unlock|unsticky)\.html$ edit.php?topic=$1&act=$2
 RewriteRule ^online-([0-9]+)\.html$ online.php?page=$1
+RewriteRule ^members-staff\.html$ members.php?act=staff
