--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,7 @@ RewriteRule ^forum-([0-9]+)-([0-9]+)\.html$ forum.php?id=$1&page=$2
 RewriteRule ^topic-([0-9]+)\.html$ topic.php?id=$1
 RewriteRule ^topic-([0-9]+)-([0-9]+)\.html$ topic.php?id=$1&page=$2
 RewriteRule ^topic-([0-9]+)-((un)?subscribe)\.html$ topic.php?id=$1&act=$2
+RewriteRule ^topic-([0-9]+)-getnewpost\.html$ topic.php?id=$1&act=getnewpost
 RewriteRule ^topic-post([0-9]+)\.html$ topic.php?post=$1
 RewriteRule ^profile-([0-9]+)\.html$ profile.php?id=$1
 RewriteRule ^mail-([0-9]+)\.html$ mail.php?id=$1
