--- a/.htaccess
+++ b/.htaccess
@@ -18,7 +18,7 @@ RewriteRule ^post-topic([0-9]+)\.html$ post.php?topic=$1
 RewriteRule ^post-topic([0-9]+)-quotepost([0-9]+)\.html$ post.php?topic=$1&quotepost=$2
 RewriteRule ^edit-post([0-9]+)\.html$ edit.php?post=$1
 RewriteRule ^edit-post([0-9]+)-delete\.html$ edit.php?post=$1&act=delete
-RewriteRule ^edit-topic([0-9]+)-(delete|move|lock|sticky|unlock|unsticky)\.html$ edit.php?topic=$1&act=$2
+RewriteRule ^edit-topic([0-9]+)-(delete|trash|move|lock|sticky|unlock|unsticky)\.html$ edit.php?topic=$1&act=$2
 RewriteRule ^online-([0-9]+)\.html$ online.php?page=$1
 RewriteRule ^members-(username|level|regdate|posts)-([0-9]+)\.html$ members.php?sortby=$1&page=$2
 RewriteRule ^members-staff\.html$ members.php?act=staff
