--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteRule ^(index|panel|faq|search|active|online|members|stats)\.html$ $1.php
+RewriteRule ^(index|panel|faq|search|active|online|members|rss|stats)\.html$ $1.php
 RewriteRule ^index-([0-9]+)\.html$ index.php?cat=$1
 RewriteRule ^panel-(login|logout|register|sendpwd|editprofile|editoptions|editpwd|subscriptions)\.html$ panel.php?act=$1
 RewriteRule ^panel-al(0|1)\.html$ panel.php?al=$1
@@ -22,4 +22,3 @@ RewriteRule ^edit-topic([0-9]+)-(delete|trash|move|lock|sticky|unlock|unsticky)\
 RewriteRule ^online-([0-9]+)\.html$ online.php?page=$1
 RewriteRule ^members-(username|level|regdate|posts)-([0-9]+)\.html$ members.php?sortby=$1&page=$2
 RewriteRule ^members-staff\.html$ members.php?act=staff
-RewriteRule ^active-rss\.html$ active.php?act=rss
