Added cross forum search engine.

--- a/.htaccess
+++ b/.htaccess
@@ -23,3 +23,5 @@ RewriteRule ^online-([0-9]+)\.html$ online.php?page=$1
 RewriteRule ^members-(username|level|regdate|posts)-([0-9]+)\.html$ members.php?sortby=$1&page=$2
 RewriteRule ^members-staff\.html$ members.php?act=staff
 RewriteRule ^faq-([0-9a-zA-Z]{5})\.html$ faq.php?q=$1
+RewriteRule ^search-results\.html$ search.php?act=results
+RewriteRule ^search-results-([0-9]+)\.html$ search.php?act=results&page=$1
