--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,7 @@ DirectoryIndex index.php
 	RewriteRule ^panel-(login|logout|register|sendpwd|editprofile|editoptions|editpwd|subscriptions)\.html$ panel.php?act=$1
 	RewriteRule ^panel-al(0|1)\.html$ panel.php?al=$1
 	RewriteRule ^panel-activate-([0-9]+)-([0-9a-zA-Z]+)\.html$ panel.php?act=activate&id=$1&key=$2
+	RewriteRule ^panel-markallasread\.html panel.php?do=markallasread
 	RewriteRule ^forum-([0-9]+)\.html$ forum.php?id=$1
 	RewriteRule ^forum-([0-9]+)-([0-9]+)\.html$ forum.php?id=$1&page=$2
 	RewriteRule ^topic-([0-9]+)\.html$ topic.php?id=$1
