--- a/.htaccess
+++ b/.htaccess
@@ -11,17 +11,12 @@ DirectoryIndex index.php
 	RewriteRule ^panel-al(0|1)\.html?[\.,;\-]?$ panel.php?al=$1
 	RewriteRule ^panel-activate-([0-9]+)-([0-9a-zA-Z]+)\.html?[\.,;\-]?$ panel.php?act=activate&id=$1&key=$2
 	RewriteRule ^panel-markallasread\.html? panel.php?do=markallasread
-	RewriteRule ^forum-([0-9]+)\.html?[\.,;\-]?$ forum.php?id=$1
-	RewriteRule ^forum-([0-9]+)-([0-9]+)\.html?[\.,;\-]?$ forum.php?id=$1&page=$2
-	RewriteRule ^topic-([0-9]+)\.html?[\.,;\-]?$ topic.php?id=$1
-	RewriteRule ^topic-([0-9]+)-([0-9]+)\.html?[\.,;\-]?$ topic.php?id=$1&page=$2
+	RewriteRule ^(forum|topic|profile|mail)-([0-9]+)\.html?[\.,;\-]?$ $1.php?id=$2
+	RewriteRule ^(forum|topic)-([0-9]+)-([0-9]+)\.html?[\.,;\-]?$ $1.php?id=$2&page=$3
 	RewriteRule ^topic-([0-9]+)-((un)?subscribe)\.html?[\.,;\-]?$ topic.php?id=$1&act=$2
 	RewriteRule ^topic-([0-9]+)-getnewpost\.html?[\.,;\-]?$ topic.php?id=$1&act=getnewpost
 	RewriteRule ^topic-post([0-9]+)\.html?[\.,;\-]?$ topic.php?post=$1
-	RewriteRule ^profile-([0-9]+)\.html?[\.,;\-]?$ profile.php?id=$1
-	RewriteRule ^mail-([0-9]+)\.html?[\.,;\-]?$ mail.php?id=$1
-	RewriteRule ^post-forum([0-9]+)\.html?[\.,;\-]?$ post.php?forum=$1
-	RewriteRule ^post-topic([0-9]+)\.html?[\.,;\-]?$ post.php?topic=$1
+	RewriteRule ^post-(forum|topic)([0-9]+)\.html?[\.,;\-]?$ post.php?$1=$2
 	RewriteRule ^post-topic([0-9]+)-quotepost([0-9]+)\.html?[\.,;\-]?$ post.php?topic=$1&quotepost=$2
 	RewriteRule ^edit-post([0-9]+)\.html?[\.,;\-]?$ edit.php?post=$1
 	RewriteRule ^edit-post([0-9]+)-delete\.html?[\.,;\-]?$ edit.php?post=$1&act=delete
