--- a/.htaccess
+++ b/.htaccess
@@ -33,7 +33,7 @@ DirectoryIndex index.php
 	RewriteRule ^online-(all|members|staff|guests)\.html?[\.,;\-]?$ online.php?show=$1
 	RewriteRule ^online-(all|members|staff|guests)-([0-9]+)\.html?[\.,;\-]?$ online.php?show=$1&page=$2
 	RewriteRule ^members-staff\.html?[\.,;\-]?$ members.php?act=staff
-	RewriteRule ^faq-([0-9a-zA-Z]{5})\.html?[\.,;\-]?$ faq.php?q=$1
+	RewriteRule ^faq-([0-9a-zA-Z]{5,})\.html?[\.,;\-]?$ faq.php?q=$1
 	RewriteRule ^search-results\.html?[\.,;\-]?$ search.php?act=results
 	RewriteRule ^search-results-([0-9]+)\.html?[\.,;\-]?$ search.php?act=results&page=$1
 	RewriteRule ^rss\.xml[\.,;\-]?$ rss.php
