--- a/.htaccess
+++ b/.htaccess
@@ -40,4 +40,5 @@ DirectoryIndex index.php index.html
 	RewriteRule ^search-results-([0-9]+)\.html?[\.,;\-]?$ search.php?act=results&page=$1
 	RewriteRule ^rss\.xml[\.,;\-]?$ rss.php
 	RewriteRule ^rss-(forum|topic)([0-9]+)\.xml?[\.,;\-]?$ rss.php?$1=$2
+	RewriteRule ^mail-admin\.html?[\.,;\-]?$ mail.php?act=admin
 </IfModule>
